hphp/hack/test/typecheck/function_pointer/obj_get_null_flavor3.php.exp
File "obj_get_null_flavor3.php", line 10, characters 13-15:
No method 'bar' in Foo (did you mean 'not_bar'?) (Typing[4053])
File "obj_get_null_flavor3.php", line 9, characters 15-17:
This is why I think it is an object of type Foo
File "obj_get_null_flavor3.php", line 3, characters 13-15:
Declaration of Foo is here
